--- a/_posts/2022-04-20-INMEDIA-快必囚3年4個月-國安法官-作爲政治人物若-鬥爛-是可悲.html
+++ b/_posts/2022-04-20-INMEDIA-快必囚3年4個月-國安法官-作爲政治人物若-鬥爛-是可悲.html
@@ -34,7 +34,7 @@ author: 獨媒報導
 <p><strong>官：被告把初生之犢年青人推到犯法場合</strong></p>
 <p>就煽惑參與未經批准的控罪，陳官指當時香港仍深受2019年社會暴力事件的動盪，有知名度的被告被邀請為集會講者，利用對象是「大埔中學生」的集會，呼籲血氣方剛的年青人參與中環遊行，令在場不少人情緒高漲。被告亦刻意貶損警察的公權力，把初生之犢的年青人推到另一犯法的場合，利用年青人去推動及實行政治上的有心人或幕後黑手的意圖，為加刑因素。</p>
 <p>就發表煽動文字控罪，陳官判刑時考量2019年開始的大規模集體暴力事件，亦考慮被告當時的政治人物角色、其政治團體背景，以及被告意欲被選入立法會議的目的和盤算。他指被告屢次叫喊或要求在場人士附和政治口號，包括「光時」、解散警隊。</p>
-<p>陳官強調，其中一罪是在《國安法》實行後犯案，被告變本加厲煽動他人不守法，貶視國安法的權威和法律效力，亦繼續打擊政府的公權力。</p>
+<p>陳官強調，其中4罪是在《國安法》實行後犯案，被告變本加厲煽動他人不守法，貶視國安法的權威和法律效力，亦繼續打擊政府的公權力。</p>
 <p><strong>官：號召集結卻佯稱健康工作坊，以圖瞞天過海</strong></p>
 <p>就公眾地方擾亂秩序行為罪，陳官指被告是有備而來，帶同麥克風和擴音器。當時有數十人圍站着，被告以粗言穢語，刻意挑釁在場戒備的警員，亦不理警方警告。</p>
 <p>就舉行或召集未經批准集結罪，陳官指被告在早一天已在網上號召，並佯稱是「健康工作坊」，亦大肆宣傳這是法例下所豁免的集結，以圖瞞天過海。但實際上，被告只是以為用「小聰明」的把戲，藉此機會糾眾在銅鑼灣東角道，咒罵執法者，宣揚自己的政治立場，貶損《國安法》。他指被告是有份策劃、召集和舉行集結。</p>
