Update VOCUS 2022-04-21 patch

--- a/_posts/2022-04-20-VOCUS-中學以下的素養教育與經驗談-國二上自然科-光學.html
+++ b/_posts/2022-04-20-VOCUS-中學以下的素養教育與經驗談-國二上自然科-光學.html
@@ -16,7 +16,7 @@ author: 王立第二戰研所
 </ol>
 <div class="draft-block draft--p left">沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</div>
 <blockquote class="draft-block draft--blockquote">抽象的解決方法三種，一種是用具體的比喻去表達，像有的老師會拿教具或放影片，另一種是透過題目練習，逐漸抓到抽象概念的意涵，最後一種就是放棄，去背吧。</blockquote>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://vocus.cc/article/6252974bfd89780001783abc" data-title="中學以下的素養教育與經驗談：國二上自然科，聲音與波動 | 王立第二戰研所 - vocus" data-description="開始進入「霧理」階段，這沒有錯字，筆者見過絕大多數放棄理化的都是從「聲音與波動」這節開始，理由很簡單，太過抽象。 抽象的解決方法三種，一種是用具體的比喻去表達，像有的老師會拿教具或放影片，另一種是透過題目練習，逐漸抓到抽象概念的意涵，最後一種就是放棄，去背吧。 ..." data-providername="Vocus" data-backgroundimageurl="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Fffcc3ea6-4d5c-4c54-aa4a-673426813b12.jpg%26width%3D1200%26sign%3DHCELOafocOoIHabx3u4v-50W5IeVucExry8fK7GGD7E&width=550&sign=mec4WGlEKY7wwe_HreGGpOzQUpnVTzgj-xDepYI0d0c"></div>
+<p><h3><a href="https://vocus.cc/article/6252974bfd89780001783abc">中學以下的素養教育與經驗談：國二上自然科，聲音與波動 | 王立第二戰研所 - vocus</a></h3><img src="https://images.vocus.cc/ffcc3ea6-4d5c-4c54-aa4a-673426813b12.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">開始進入「霧理」階段，這沒有錯字，筆者見過絕大多數放棄理化的都是從「聲音與波動」這節開始，理由很簡單，太過抽象。 抽象的解決方法三種，一種是用具體的比喻去表達，像有的老師會拿教具或放影片，另一種是透過題目練習，逐漸抓到抽象概念的意涵，最後一種就是放棄，去背吧。 ...</figcaption></p>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">國二上自然，理化的下半部，進入到光、熱以及原子論。</div>
 <div class="draft-block draft--p left">第二次段考會考到光，大部分放棄的同學，都是看到那個成績後，決定躺平。坦白說作為老師不能認同，但心情上可以理解，因為聲音跟光，背一背的性質就算了，要抽象思考的真的就是……</div>
@@ -32,19 +32,19 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">切記，「不要在國中講光的波動」，要講也是很含糊地說，「光其實也有波的特性，可以用第三章波動去算波長跟頻率」。到此為止，除非私校想要超前教學，刻意在國二的光譜去教怎樣算頻率。不然，知道波長跟頻率是反比的概念就可以，我們面對的是<span style="font-weight: bold; ">第一次「正式學習光學」</span>的學生，不是篩選過的高中生。</div>
 <h3 class="draft-block draft--h3" name="header-2ihas">直進性：為何要用點光源解釋？</h3>
 <div class="draft-block draft--p left">直進性請看下圖，由於數學的相似三角形並不會在國二教，所以若貴校想教，或是家長想要講，請不要直接代公式，下面幾張圖可以解釋。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:551px" class="image-block-prerender" data-src="https://images.vocus.cc/1ed18681-d343-44c8-9bfd-1b3f1f5839fc.jpg" data-width="551" data-height="154" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/1ed18681-d343-44c8-9bfd-1b3f1f5839fc.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">新進老師應該懂為何了，若不採用點光源，那麼光線出去照射的結果會很奇怪，至少在國中來說只會造成學生混亂。知道點光源後，之後的作法是了解直進性，不要急著上針孔，而是影子。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:708px" class="image-block-prerender" data-src="https://images.vocus.cc/7291b142-a067-437f-8193-ee9f31256766.jpg" data-width="708" data-height="396" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7291b142-a067-437f-8193-ee9f31256766.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">這種多障礙物的解釋，遠比課本只有一個障礙物好，而且不會不好理解。重點在於，讓學生了解光怎麼直進，以及陰影出現的理由，現在國小大致都會提到一點，中學把圖畫好，用處很大。</div>
 <div class="draft-block draft--p left">總之，直進性比想像的要難，老師不覺得是因為自己本來就比較厲害，家長是學過才覺得簡單，學生會因為直線所以好懂，結果就是針孔成像直接爆炸。如下圖。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:843px" class="image-block-prerender" data-src="https://images.vocus.cc/8a15d17f-6df3-453e-a996-bde5bac47bd6.png" data-width="843" data-height="300" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8a15d17f-6df3-453e-a996-bde5bac47bd6.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">一般學生很難理解，都講點光源了為何出現左圖？這算常見的新手錯誤，因為教師自己習慣了，就順順講下去。左圖要用，也建議分成兩條線，但筆者的經驗是右圖最好，更好的方式是下面兩圖，漸進式的講解，雖很花時間，不過效果好。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:816px" class="image-block-prerender" data-src="https://images.vocus.cc/fedf5424-ff2f-44e0-b969-da2de0f0e712.jpg" data-width="816" data-height="286" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/fedf5424-ff2f-44e0-b969-da2de0f0e712.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">看圖就能明白，讓學生先了解到，紅光打出的範圍在哪，藍光又在哪，中間可以用粉筆把光中間都塗滿，加強印象。接著在把中間的縫隙，縮到右邊的情況，時間多可以分三次，依序把中間的縫隙縮小，得到「上下顛倒的兩個光點」。</div>
 <div class="draft-block draft--p left">各位教師跟家長看到這裡大概可以明白，就是透過拆解跟分開解釋，讓學生抓到針孔成像的「顛倒性質」。這種上課法的優勢是，後面講到光的三原色，就可以把左圖中間的紅藍塗成紫色，以及方便解釋成像的三角形。</div>
 <h3 class="draft-block draft--h3" name="header-98hfe">針孔成像：熟悉比例感，課後稍微補強即可跟上</h3>
 <div class="draft-block draft--p left">針孔的成像大小計算，算是相當頭痛的，會的就是會，不會的就是不會。關鍵在於對數學的掌握度，已經在小學就有相似三角形概念的會很好懂，不然這邊就只能慢慢講，如下圖。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:721px" class="image-block-prerender" data-src="https://images.vocus.cc/7b0266d0-f3e4-4493-83c7-665bdeebdd41.jpg" data-width="721" data-height="253" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7b0266d0-f3e4-4493-83c7-665bdeebdd41.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">務必塗色一下，加強那個三角形的感覺，然後不要代公式，請用三角形的底跟高解釋。例如「底跟高如果是1cm：2cm，那麼把放大兩倍就變成了2cm：4cm」這種說法，多講幾個數字，帶入比例感。上圖可以多幾個變化，物距跟像距，但請不要突然多一個7cm、13cm的質數去整人，儘量用方便整數拆解的數字。</div>
 <div class="draft-block draft--p left">就經驗來說，中等程度的學生大概可以透過這種做法，「全部都學會」，筆者的經驗是，自然程度在PR40~80之間的，沒有失敗過。只不過，隨著後面反射跟折射進來，程度在後面的會越來越跟不上。</div>
 <div class="draft-block draft--p left">不是這種教法有問題，是時間不夠，尤其108課綱的自然課時間又更短，要透過學習單去加強，真的沒辦法。加上其他科也要考試，這裡我建議家長自己在家補強，不行就送補習班，但請確認這個老師知道怎麼教，一直丟考卷的就不建議，不如家長看筆者講一講後，能的話試試看花三個晚上的時間。</div>
@@ -56,7 +56,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">基本上，請各位老師跟家長記得一個概念：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「不管實像虛像，你的眼睛都有接受到光線。」</div></div>
 <div class="draft-block draft--p left">筆者指的是國中，物理老師麻煩不要去拿大學光學課本，學生能懂才奇怪。以下用鏡子來解釋，對象是學生，筆者曾經的解釋法</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:813px" class="image-block-prerender" data-src="https://images.vocus.cc/c8d1b178-9c64-4c7d-89b2-eeea9d94b4df.jpg" data-width="813" data-height="260" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/c8d1b178-9c64-4c7d-89b2-eeea9d94b4df.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <ol>
   <li class="draft-block draft--li">第一，強調光線的直進性，告訴學生一個很重要的概念，就是眼睛並不能「看到」物體，只是一個接收器（<a href="https://vocus.cc/article/611adae9fd897800017a838d" target="_blank" class="draft--a">國一生物受器</a>），然後轉成電子訊號被大腦「解讀」。</li>
   <li class="draft-block draft--li">第二，由於光的直進性，大腦會解讀物體的位置，在光線過來的直線方向上。</li>
@@ -67,18 +67,18 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-68e1l">藉由教具、實際現象去理解實像虛像的差異</h3>
 <div class="draft-block draft--p left">所以問題在於，折射這邊開始解釋實像，會遇到什麼麻煩。根據定義，實像是指「透過光學儀器如透鏡，讓物體發出的光線會聚，可以被直接看到的成像」，因為光線實際會聚在這點，所以可以藉由光屏去承接。而這邊，筆者強烈強烈建議，使用教具教學，過去的經驗會使用兩種類交互使用。</div>
 <div class="draft-block draft--p left">一種是雷射筆，另一種是手電筒，但在手電筒前方用黑色膠帶包住，挖一個三角形的洞。然後拿出凸凹透鏡跟鏡子，實際秀給學生看，到底差在哪裡。由於雷射光是一條線，讓學生可以觀察光路的前進，有些出版社會給這種教具（三條光線），使用起來很便利，請務必利用。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:971px" class="image-block-prerender" data-src="https://images.vocus.cc/6ee60414-c7f6-42d0-a864-a18a61c8ba92.jpg" data-width="971" data-height="296" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6ee60414-c7f6-42d0-a864-a18a61c8ba92.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">告訴同學，「左邊的是實像，因為光線會聚在此，其他地方並不是沒有像，只是有沒看到？三條光打出三個點，表示像會打散。」說到這能懂的學生就很厲害了，故要拿包黑布的手電筒，照做一次。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1033px" class="image-block-prerender" data-src="https://images.vocus.cc/708afa16-9313-4412-8ea2-835a4458e40c.jpg" data-width="1033" data-height="308" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/708afa16-9313-4412-8ea2-835a4458e40c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <blockquote class="draft-block draft--blockquote">「同學看到了嗎？左邊的成像跟原本的一樣，只是倒立，因為光路到此已經交錯了，跟針孔一樣。右邊的不是沒有像，只是有沒發現越遠越模糊？越遠越看不出三角形了。」</blockquote>
 <div class="draft-block draft--p left">用這種方式讓同學了解，實像指的是「會聚後跟原本很相似的像」，到此為止。不要再講更多了，開始進入折射的各種倒立正立、放大縮小、實像虛像等概念。</div>
 <div class="draft-block draft--p left">虛像反倒要再進一步解釋，虛像不是不存在的像，也不是虛無縹緲，因為一定有學生會以為，虛像不存在。這千萬要打醒，不存在你怎麼看到？</div>
 <div class="draft-block draft--p left">關鍵在於，我們是使用眼睛觀察，故要讓同學了解，虛像指的是透過反射折射，光路發散後被我們眼睛接收，但我們由於「光線的直進」，大腦會解讀物體在光線過來的前方，造成一種錯覺，而物體並不存在於我們想像的位置。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:931px" class="image-block-prerender" data-src="https://images.vocus.cc/dcea0249-93df-4d38-baba-fac322124df8.jpg" data-width="931" data-height="293" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">右圖：虛像的成像點並無實物</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dcea0249-93df-4d38-baba-fac322124df8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">右圖：虛像的成像點並無實物</figcaption></div>
 <div class="draft-block draft--p left">這是讓學生理解虛像的關鍵步驟，首先左圖讓人清楚明白，光線射出後並非沒東西，<span style="font-weight: bold; ">很多人會以為虛像就是沒有光，實際上是光線被打散</span>，紙屏上會很清楚，三道雷射小圓點被誇大成模糊的團塊。其次是在光線的延長線後方，記得要錯開位置，虛像的成像點，其實啥米東西都沒有。若使用包黑布的手電筒，效果會更好。</div>
 <div class="draft-block draft--p left">眼睛就是一種光學儀器</div>
 <div class="draft-block draft--p left">那麼，怎樣確定虛像存在？這到底怎麼回事？使用手電筒比較好，找同學實際站在凹透鏡後方，用眼睛觀察，確實有發現成像，如下圖。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:539px" class="image-block-prerender" data-src="https://images.vocus.cc/d13322d8-10cd-4d7b-8bf5-4b36d02ec10e.jpg" data-width="539" data-height="305" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d13322d8-10cd-4d7b-8bf5-4b36d02ec10e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">亦即，實際上光線是有進入眼睛，只是根據光線直進性，我們會以為會聚的光線，是在光像過來的前方，也就是左邊虛線的交點。因為我們「以為」在那邊，就跟看鏡子一樣，並沒有真的光線聚集在那，故稱我們看到的是虛像。</div>
 <div class="draft-block draft--p left">但是，光線依然有進到眼睛喔！而且眼睛看到的是實像！</div>
 <div class="draft-block draft--p left">同學一定大吃一驚，這時候可以把後面光學儀器帶進來，直接講眼睛的構造，水晶體就是一個凸透鏡，光線進到水晶體後，折射會聚到視網膜上，所以眼睛實際上有接收到光線，是一個倒立縮小的實像。</div>
