--- a/_posts/2022-04-20-VOCUS-我的叔叔-拿破崙.html
+++ b/_posts/2022-04-20-VOCUS-我的叔叔-拿破崙.html
@@ -8,4 +8,39 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<h3>「在政治層面上，罪惡應該是被『補救』，而非全然訴諸『報復』。」</h3>
+<p>「我的叔叔拿破崙」，路易．拿破崙，aka，拿破崙三世（Charles Louis-Napoléon Bonaparte / Napoléon III，1808－1873；總統任期：1848－1852；皇帝在位：1852－1870）</p>
+<img src="https://images.vocus.cc/2517cd08-c427-403c-8350-1b4ad89e8c92.webp">
+<p>即將交棒給宙斯分身…「金牛座」（Taurus）的壓軸牡羊皇，4月20日知名壽星，路易．拿破崙誕生於花都巴黎，他被歷史學家評論為西元十九世紀歐陸歷史上的代表性領導者之一。而名留青史，又注定成為「千古話題人物」的路易，數算從政生涯，路易先是擔任過法蘭西第二共和國「總統」，後來居然又登基法蘭西第二帝國「皇帝」！一人單獨橫跨民主、極權兩端大位之際，談及他的叔叔，正是你我所熟知，大名鼎鼎的拿破崙一世（Napoléon Ier / Napoléon Bonaparte，1769－1821）。</p>
+<p>根據後人進行基因序列的比對下，路易與其「名義上」的父親，也就是拿破崙一世的弟弟Louis Napoléon Bonaparte（荷蘭國王）並未擁有血緣關係，生父極有可能是母親牙床上的眾多「入幕嘉賓」之一，但隨著拿氏家族失勢，年少時的路易同樣蒙受其害，被迫流亡瑞士、英國等地，期間雖積極投身政治運動，還兩次發起武裝政變，但都宣告失敗，甚至被政敵逮捕後，直接宣判終身監禁…</p>
+<p>然而，僥倖假扮成石匠順利越獄之後，隨著法國本土政經情勢不穩，路易不只平安重返巴黎，更打出了「拿破崙」如雷貫耳的旗號，藉由自己特殊的身世背景，喚起了亂世蒼生對於往昔拿破崙一世稱霸歐陸的美好印記！即使有人提議要永久禁止過往的王室成員回到法國繼續干政，但「拿破崙」這三個字實在意義非凡，因此路易輕鬆當選巴黎市議員，也在當時工人興起革命運動，加上廣大資產階級的支持與奧援下，透過新憲法頒布下的民主選舉機制，路易一舉登峰，以560萬對上150萬的懸殊得票數，西元1848年的12月，「壓倒式」地當選為第二共和的總統！</p>
+<img src="https://images.vocus.cc/ffc99d7c-6f4a-4d29-a0a1-4fc36ef7f7f0.jpg">
+<p>項莊舞劍，志不在「酒席表演」，同樣地，血液裡一心抱持以重建叔叔拿破崙一世不朽功績為目標的路易，雄心壯志…自然不在區區一個「共和國總統」職位…</p>
+<p>就在路易以總統之尊違反憲政體制內的共和國憲法，強行解散國會，發動對擠身政權的新一波政變時，法國境內為數龐大的保守派庶民，早已在路易的「洗腦」下篤信路易會像過去拿破崙一世在位時對老百姓直接負責，不需要再透過繁瑣複雜的議會制度來監督、問政，所以百姓們先是無條件同意，讓路易的總統任期得以延長外，接著更在擔心府會（路易跟議會）之間將因價值觀差異就此爆發衝突，彈劾與罷免總統勢必會將國家帶往領導真空的無政府狀態窘境下，一場關鍵性的全民公投議決，法國人民決定為其領導人背書…</p>
+<p>西元1852年11月，全國公投拍板定案，拿下97%，幾乎是全部同意票數的路易正式黃袍加身，從原本自稱的「Le Prince-Président」升等為皇帝，也就是拿破崙三世！Napoléon III！</p>
+<p>稱帝後的第一步，政敵跟重罪犯通通送出法國，押往南美洲法屬圭亞那的魔鬼島（Île du Diable）以及大洋洲上，南迴歸線附近的新喀里多尼亞島（Nouvelle-Calédonie），一勞永逸，不留後患。</p>
+<p>坐上王座的前七年，拿破崙三世徹底廢除了所謂的「政黨政治」，一切公共事務全數交由「全民公投」來辦理，大家彼此承擔責任與決議，雖然從現在的角度看來有些古怪，很像是i-voting（咦？）的極致化，但也讓全民普選的制度與精神從此在法國永久確立起來…</p>
+<p>主張「全力拚經濟」，為求趕上與其他一線工業強國，尤其是與英國之間的發展落差，拿破崙三世下令推動多項大型公共建設的開發案，當中包括了構建法國東西向和南北向的全國鐵路運輸網、增設港口、開闢運河，推動新一代的都市規劃以及新興商業活動的推廣，並修復了諸多在革命期間遭到破壞的著名建築物與地標，也改善巴黎市容、提高衛生水平（汙水處理系統）…最重要的，就是先進高品質綜合賣場「百貨公司」的設立！</p>
+<img src="https://images.vocus.cc/bf1a8a99-9b3a-4507-baf6-4ea5e2234db0.jpg">
+<img src="https://images.vocus.cc/18b202ad-8ab5-4736-9fcd-c64b2461d89a.jpg">
+<p>另一方面，拿破崙三世為了「答謝」與回饋法國庶民的無條件支持與完全託付，他也將勞工休假制度、退休年金和職災意外補助津貼給首次法制化，並給予勞工組織就地合法化；他也要求立法來保障銀髮族、殘疾人士的相關權益，甚至還在法國境內廣設「土地銀行」，鼓勵農民發展葡萄園與小麥農場以促進轉型與升級。</p>
+<p>言談間尤以天主教鬥士自居的拿破崙三世，也在執政時大幅恢復與提高天主教會在法國各地的影響力，讓教會得以在公共教育體系裡扮演著更具權威與主導的地位，讓信仰扎根與深固，這也使得當時的法國取代了傳統的奧地利帝國，成為歐洲大陸天主教國家裡最強力的護教政治力量！</p>
+<h3>但是，命運的安排，亦或是自身的造孽，真的是「成也拿破崙、敗也拿破崙」…</h3>
+<p>打著「拿破崙」名號攀上政治顛峰的路易，舉手投足之間，莫不將叔叔拿破崙一世走過的足跡視為是治國方向的唯一參考，內政如此、外交亦然。秉持重建大法蘭西王國，也企圖再次征服歐陸疆土的拿破崙三世，即使在內政上頗有建樹，可是在重要的外交領域裡，其搖擺不明與敵我曖昧的詭異立場，卻引來歐洲各國領導人的非議，尤其阻撓普魯士王國（Preußen，後來的「德意志帝國」）完成統一大業，並爭搶歐陸首席霸權的對峙關係，更是讓路易被普魯士王國首相俾斯麥（Otto von Bismarck）抓住了其易怒、無禮又專權的致命弱點，宛如武林高手的死穴遭破，俾斯麥日後更給予了拿破崙三世沉重的致命一擊！</p>
+<img src="https://images.vocus.cc/d0a7a369-4ebc-4e24-bba7-894fabe6cef4.jpg">
+<p>西元1870年7月19日，被一封刻意修改措辭的電報所激怒，貿然宣戰普魯士的拿破崙三世，用22萬人的大軍壓陣，展現出準備痛宰日耳曼人之決心。但沒有經歷大規模陸地會戰的他，萬萬沒想到，尚未聞到凱旋的氣息之前，法蘭西軍團竟然很快就被訓練有素，早已作好應戰準備的俾斯麥所統轄之普軍給團團包圍，法軍連戰連敗，戰場主力更被硬生生切開…</p>
+<p>9月初的關鍵性「色當會戰」（Bataille de Sedan），普軍的火炮三面夾擊，如天降閃雷般殺得法軍無處可躲，在多次突圍終告失敗之下，親自督軍的拿破崙三世只得高舉白旗，黯然地向俾斯麥投降。陣亡、受傷加上舉白旗者，法國一共損失了12萬4千名戰士，但反觀普魯士王國，犧牲、負傷和行蹤不明者加總，9,942人，等於是完勝了吧！眼下的路易，「拿破崙」三個字不再神勇威武，淪為普魯士帝國獨霸歐陸天空下的第一號「戰俘」！</p>
+<img src="https://images.vocus.cc/e0a3b4fb-f080-4c9a-9409-2e06a36bff42.jpg">
+<p>「皇帝被抓」的消息，當天就傳回了巴黎，彷彿夢醒，應該是驚醒吧？原先沉溺於「拚經濟」的法國人，此刻終於頭腦清楚，「公投不等於公義」，拿破崙三世說得再多，藍圖再畫，再怎麼樣「Cosplay」，永遠都不可能是當年威風八面的拿破崙一世！</p>
+<p>兩天之後，隨著政治風向逆轉，在巴黎市民的情緒接近沸點下，拿破崙三世的帝國遭到無情地推翻！即便路易一手推動了近代法國經濟與社會體系的架構，讓法國茁壯於紛擾的歐陸大地，但在人民的熊熊怒火中，拿破崙三世終結了法蘭西千載歷史上的君主制度，成為法國版的「末代皇帝」。</p>
+<blockquote>「偉大的歷史事變和人物都出現兩次，第一次是作為『悲劇』出現，第二次是作為『鬧劇』出現。」</blockquote>
+<p>，改寫自馬克思《路易．波拿巴和他的霧月十八日》</p>
+<p>西元1871年3月，卸下「拿破崙」光環的路易平安獲得了釋放。已無顏面對法國鄉親的他，選擇不再回到改行共和體制的故鄉，而是轉往英國奇斯爾赫斯特（Chislehurst），和早先抵達的妻兒團圓…</p>
+<blockquote>「你當時在『色當』嗎？」</blockquote>
+<p>，彌留時對醫生的喃喃自語。</p>
+<img src="https://images.vocus.cc/919a43a3-0c7c-444e-97bc-2a8d9d8105b7.jpg">
+<p>西元1873年1月，路易病逝異鄉，隨後下葬當地。拿破崙家族對法蘭西，乃至於歐洲大陸超過半世紀的實質影響力，到此畫下了一個不盡完美，甚至帶有些苦澀的休止符。</p>
+<p>圖文來源、一併致謝：</p>
+<p><a href="https://en.wikipedia.org/wiki/Napoleon_III">https://en.wikipedia.org/wiki/Napoleon_III</a></p>
+<p>這篇文章的第一版，是在西元2020年的4月底，也是我加入「方格子」之後所分享的第一篇文章，從無到有，看著追蹤人數與成就值的緩步上升，心中充滿著無比感激與致謝。說真的，相較於投資理財或星相占卜，還是兩性、親子議題，介紹每日壽星或歷史大事紀的文章，著實沒有任何蹭熱度或跟風可言，但能夠有讀者您持續的支持與鼓勵，已是對我最大與最深的讚賞，再次感謝大家的「愛心」。</p>
+<img src="https://images.vocus.cc/6efd88da-461b-4d10-ad52-49e571e87ee1.jpg">
