--- a/_posts/2022-04-20-PQ-經濟學人-年長選民意向將左右法國總統大選結果.html
+++ b/_posts/2022-04-20-PQ-經濟學人-年長選民意向將左右法國總統大選結果.html
@@ -20,7 +20,7 @@ author: 王雪俐
 
 
 
-<p>上週《經濟學人》的一篇文章指出，作為法國第五共和最年輕的總統，若馬克宏最終取得勝利，都要感謝法國的年長選民。分析顯示，<strong>若第一輪投票中只計算 60 歲以下選民票數，那麼馬克宏將居於第三，根本沒有進入第二輪競爭的機會</strong>，法國則將在極左的雷朋和極右的梅蘭雄（Jean-Luc Mélenchon）之間做出選擇。</p>
+<p>上週《經濟學人》的一篇文章指出，作為法國第五共和最年輕的總統，若馬克宏最終取得勝利，都要感謝法國的年長選民。分析顯示，<strong>若第一輪投票中只計算 60 歲以下選民票數，那麼馬克宏將居於第三，根本沒有進入第二輪競爭的機會</strong>，法國則將在極右的雷朋和極左的梅蘭雄（Jean-Luc Mélenchon）之間做出選擇。</p>
 
 
 
