Update VOCUS 2022-04-22 patch

--- a/_posts/2019-05-27-VOCUS-分析首宗合謀定價案裁決結果與招標妥缺憾.html
+++ b/_posts/2019-05-27-VOCUS-分析首宗合謀定價案裁決結果與招標妥缺憾.html
@@ -11,6 +11,7 @@ author: REDBRIC
 <p><strong>招標妥未有協助業主處理招標完成後的技術支援</strong> </p>
 <p><strong>即使市建局自2016年5月推出招標妥措施，聲稱可減低招標階段被操控的風險，但最近審裁處裁定兩宗圍標或違反競爭條例的第一行為守則的案件，其中十間工程公司是在招標完成後，才進行合謀定價協議 (根據競委會資料指：2016年6月17日拜神儀式後，10間承建商達成合謀定價協議，各獲分4樓層)，而招標妥一般在招標完成後便不再為業主提供協助，議員不時接獲不少有關招標妥服務的投訴和不滿，</strong></p>
 <p><strong>曾有私人屋苑業主向我投訴，屋苑採用招標妥，但市建局只是提供如電子招標平台等硬件服務，未有協助監察招標程序，尤其沒有在招標完成後協助監察中標商的懷疑違法行為，包括懷疑把大量工程分判給落選的投標商(價格較低的另一投標商)，變相圍標，欺騙業主，事件反映招標妥存在重大缺憾。</strong></p>
+<img src="https://images.vocus.cc/1d98db6f-3254-42b6-9d03-30a059bc7bec.jpg" alt="圖1 安達邨">
 <p><strong>圖1 安達邨</strong></p>
 <p>今日(5月27日)立法會特別小組會議就市建局招標妥計劃向議員匯報 (立法會，2019)，其中提及招標妥服務內容：『2016年5月市建局推出招標妥，會安排一名獨立第三方顧問，就採購承建商的合約文件及工程費用的估算，向業主提供意見 ， 以便業主評估接獲的投標是否合理。「 招標妥」亦提供一個電子招標平台，供業主進行招標程序委聘承建商。該招標平台會在開標前將投標者身份保密，務求盡量減低招標階段被操控的風險。』內容以硬件服務為主，如工程費用估算及電子招標平台，相反，文件並沒有提及這宗合謀定價判決，更加沒有提出招標妥有何改善對策，協助業主監察中標後的圍標行為。</p>
 <p>事實上，根據案件案情，該合謀定價行為並非在中標前發生，反而是在中標後合謀定價：『審裁處裁定，十間建築公司答辯人在位於九龍觀塘的公共屋邨安達邨第一期提供裝修服務時，從事瓜分市場及合謀定價行為，違反了《條例》的「第一行為守則」 。』</p>
