--- a/_posts/2019-06-20-VOCUS-即將來到的全球經濟衰退-你準備好未.html
+++ b/_posts/2019-06-20-VOCUS-即將來到的全球經濟衰退-你準備好未.html
@@ -12,11 +12,14 @@ author: REDBRIC
 <p>‘Mr. Draghi said Tuesday that ECB policy makers would consider in the coming weeks how to adapt their policy tools “commensurate to the severity of the risk” to the economic outlook.’ [1]</p>
 <p>中國亦剛在三日前降準1000億元人民幣及逆回購1500億元人民幣[2]。其他還有澳洲和紐西蘭減息，都顯示全球中央銀行意識到衰退即將來臨！加上美中貿易戰，香港活在兩國夾縫，經濟衰退跡象已經浮現。今日有報章報導，今年第一季的中港公司併購 (Mergers and Acquisitions) 宗數大幅下跌25%，金額亦下跌26%。[3]</p>
 <p>香港在多個經濟環節已經出現衰退情況，包括進出口量子指數連續6個月下滑，零售金額年度變化連續3個月負數，公司破產宗數破紀錄單月超過2萬間，而3個月銀行同業拆息更一度衝破2.5% (圖1)，可能反映資金流走加快的情況。</p>
+<img src="https://images.vocus.cc/a6273ec6-b53b-412b-b951-80f8d553f907.png" alt="圖1 香港銀行同業拆息3個月，來源：Trading Economics">
 <p>圖1 香港銀行同業拆息3個月，來源：Trading Economics</p>
 <p>事實上，自從2015年美國進入利率正常化階段，開始收水和加息，而香港因着聯繫匯率制度的原故，經濟無可避免受到影響，因此我早在2015和2016年已經提出有關經濟衰退的警告[4][5]。美國加息9次，並從市場縮表收水5350億美元 (圖2)，</p>
+<img src="https://images.vocus.cc/74cc4144-e83a-4f0b-a613-7c974b834367.png" alt="圖2 美國縮表收水金額。來源：Wolfstreet.com">
 <p>圖2 美國縮表收水金額。來源：Wolfstreet.com</p>
 <p>去年中，市場對經濟衰退的預測已由學術討論轉為直接改變投資策略，美國長短債息差開始收窄[6]，至今年5月23日正式出現倒掛現象[7] (圖3)。我亦已於去年10月1日發文呼籲大家準備應對香港經濟可能出現的不利變化，現重複如下：</p>
 <p>「投資專家陶冬在今期信報財經月刊呼籲大家『仔細看一看自己的現金流，如果槓桿偏高，就要去槓桿，債務比率不能太高，證券投資不能太進取。』我想加上一項：大家應該減少消費，積蓄防饑！」[8]</p>
+<img src="https://images.vocus.cc/afe9036f-1f9e-4974-b583-31b3dc89bc06.jpg" alt="圖3 美國長短債息差倒掛。來源：https://www.marketwatch.com/story/the-yield-curve-inverted-here-are-5-things-investors-need-to-know-2019-03-22">
 <p>圖3 美國長短債息差倒掛。來源：https://www.marketwatch.com/story/the-yield-curve-inverted-here-are-5-things-investors-need-to-know-2019-03-22</p>
 <p>至今不足一年，全球主要經濟體已開始掉頭減息或放水，衰退訊號愈來愈明顯，大家準備好未？</p>
 <p>#經濟衰退 #減息 #量寬QE</p>
