--- a/_posts/2020-04-19-VOCUS-後疫症經濟-1-衰退與通縮.html
+++ b/_posts/2020-04-19-VOCUS-後疫症經濟-1-衰退與通縮.html
@@ -15,7 +15,8 @@ author: REDBRIC
 <p>雖然不同的組織對各國今年首兩季的經濟下降幅度預測有所不同，差距甚大，但唯一的共識是首兩季度的GDP增長率將大幅下降，美國首季的經濟預測更可能出現-6%的跌幅！香港接連遭到美中貿易戰、反送中運動和COVID-19疫症的打擊，經濟進一步衰退將難幸免，事實上，香港早在去年第三、四季已領先全球進入衰退，但季度跌幅在-0.3%至3.0%之間，未算嚴重；然而，世紀疫症令全球停擺，香港作為細小外向形經濟，高度依賴國際資金、全球貿易及旅遊物流等全球化生意，一直缺乏經濟自給，如今實在已無能為力，勢將迎來連續第四和第五季的經濟季度負增長，而且相信其跌幅可能達至雙位數！</p>
 <p>可惜有關的數據最早也要等到五月才有公布，後知後覺，難作防備。幸好，新加坡率先報告2020年第一季度的GDP跌幅，可作為香港的參考，由於兩地的經濟和人口等基本因素的規模相約，而且都是高度依賴國際貿易、旅遊和資金的城市，同樣受到冠狀病毒的嚴重打擊，而且過去一年的GDP變化也跟香港差不多 (比香港較佳)，相信數據有一定的參考作用。</p>
 <p>圖1顯示了過去12季度新加坡的季度GDP增長率，2020年第一季度GDP的跌幅為-10.6％，幅度與2008年相約。但香港在2008年國際金融風暴中GDP的跌幅不足-4%，即使2003年SARS的GDP跌幅也不足-3%，而且兩次都能重生，今次能否再顯神通，須看香港人的本領。</p>
-<p>圖1新加坡環比GDP增長率。資料來源：Trading Economics</p>
+<img src="https://images.vocus.cc/7d9087a2-2e06-49d3-8be9-480b9363be30.png" alt="圖1 新加坡環比GDP增長率。資料來源：Trading Economics">
+<p>圖1 新加坡環比GDP增長率。資料來源：Trading Economics</p>
 <p>今次的經濟衰退，並非單純因為金融泡沫爆破，影響消費和投資信心，而是帶有供應鏈斷裂的消費限制，不能輕易透過減息和派錢等鼓勵消費手段解決。無論如何，疫症已令消費大幅減少，這從遊客人數下降95%和零售總值下跌44%已充分反映，詳見姚(2020a,b)。當消費急遽下跌，結業和破產增加，失業率自然上升，失業率上升又倒過來令消費進一步減少，形成惡性循環，結果是令人困擾的漫長經濟衰退。</p>
 <p>2. 通貨緊縮</p>
 <p>根據交換等式，MV = PQ，其中M是貨幣供應，V是貨幣周轉速度，P是每種商品和服務在其中的平均價格水平，Q是生產的商品和服務的數量。</p>
@@ -34,4 +35,3 @@ author: REDBRIC
 <p>姚松炎 (2019e)香港政府擴大開支也擋不住全球經濟衰退，方格子，11月13日。<a href="https://vocus.cc/eyanalysispoliecon/5db8df09fd897800019fb675">us.cc/eyanalysispoliecon/5db8df09fd897800019fb675</a></p>
 <p>姚松炎 (2020a) 比較SARS與COVID-19對零售總值的影響，方格子，3月23日。 <a href="https://vocus.cc/eyanalysispoliecon/5e77ca4bfd897800014e3504">https://vocus.cc/eyanalysispoliecon/5e77ca4bfd897800014e3504</a></p>
 <p>姚松炎 (2020b) 比較SARS與COVID-19對來港遊客人數的影響，方格子，3月17日。<a href="https://vocus.cc/eyanalysispoliecon/5e6ff17bfd89780001d4a14e">https://vocus.cc/eyanalysispoliecon/5e6ff17bfd89780001d4a14e</a></p>
-<p><br></p>
