--- a/_posts/2020-04-19-VOCUS-後疫症經濟-2-房產價格下跌-非關房產供應.html
+++ b/_posts/2020-04-19-VOCUS-後疫症經濟-2-房產價格下跌-非關房產供應.html
@@ -11,8 +11,10 @@ author: REDBRIC
 <p>香港連續遭受三場風暴，包括美中貿易戰、反送中社會抗爭運動和COVID-19的全球大流行世紀疫症，世界經濟衰退已成定局，房產需求亦遇上空前的打擊，零售店舖更出現大規模的結業潮，價格至今年2月已下跌一成(年度變化)，寫字樓價格也有大約-8.5%的跌幅，而住宅則反應較緩慢，才剛剛開始回落，再一次確證了我多年來所提出有關香港房產價格的升跌與房產供應大致無關的理論，反而是實質利率(貨幣供應)和全球資金流向所主導的資產價格泡沫，因此雖然各類房產的供需不同，但卻經常出現同步升跌現象。</p>
 <p>在疫症持續擴散的情況下，香港的零售店舖生意首當其衝，業續暴跌，2月份的零售總值下跌-44%(年度變化)，市面上已開始出現結業潮，業主唯有減租希望繼續維持租金收入。房產投資者在作出投資決定時，會比較各類投資工具的回報與風險比例，經濟學稱為CAPM模型，房產的回報率直接受到租金升跌的影響，因此當租金下跌，若其他因素不變，售價也需作出相應調整，加上房產投資的風險突然急增，預期通縮更會令實質利率加正，要求回報增加下，零售店舖的價格受到雙重打擊，跌勢更急。</p>
 <p>圖1和2顯示過去20多年的零售店舖的租金 (RRI) 和售價指數 (RPI) 的年度變化率，兩者一直大致齊上齊落，而租金的波幅比價格的波幅為少，反映回報要求下投資者參考實質利率和資金流向等資訊所帶動的波幅。其中在1999年亞洲金融風暴時，店舖租金最多下跌-17.4%，而價格則最多下跌-48.7%，接近3倍！而店舖租金至今年2月已下跌了-6.2%，價格則下跌了-10.8%，估計這數字主要反映前兩項打擊的影響，仍未完全反映疫症對店舖租金的影響，而今次疫症不但影響香港本身，而是全球大流行，旅遊生意短期難以完全恢復，相信店舖的租金和價格會進一步調整。誠然，過去20多年香港的店舖價格已升了5倍多，即使下跌一半，也不過是回到2010年的價格而已。</p>
+<img src="https://images.vocus.cc/a388adc4-7ddf-46bb-bd80-d16ac6a4d41e.png" alt="圖1 香港的零售店舖的租金(RRI)和價格指數(RPI)年度變化率。資料來源：差估署">
 <p>圖1 香港的零售店舖的租金(RRI)和價格指數(RPI)年度變化率。資料來源：差估署</p>
 <p>事實上，住宅的租金和售價也有類似的關係，圖2 顯示過去十年住宅租金變化與價格變化同步，而價格的波動較大，但由於數據滯後，加上政府干預樓市，一般住宅的價格變化都會較其他房產市場為慢。</p>
+<img src="https://images.vocus.cc/38b5edcc-08ef-4209-a819-5d81a48ba2f1.png" alt="圖2 香港私人住宅租金和樓價指數的年度變化率，資料來源：差估署">
 <p>圖2 香港私人住宅租金和樓價指數的年度變化率，資料來源：差估署</p>
 <p>上星期我已在蘋果日報撰文(姚，2020)解釋，除了因需求下降所帶動的租金下跌因素外，還有另外三方力量影響房產市場。首先，由於疫情導致全球多國封關及限制外出，令遊客絕跡，消費暴跌，大量社交活動停止，令失業率急升。部份市民和投資者需要拋售資產套現，減少負債，增持現金，以備突發應急之用；當僱員和投資者預見朝不保夕，收入不穩，必然調整他們的房產投資與置業計劃，減輕債務，令房產需求減少。加上過去幾年的加按比率急升(姚，2019)，一旦樓價下跌而收入減少，他們被逼斷供或者策略性斷供，造成銀主盤湧現，將進一步推低房產價格。</p>
 <p>第三，當市場預期通縮出現，即使減息至零，實質利率仍是正數，房產投資的借貸成本不再平宜，每月供款高於租金，房產投資不甚吸引，資金或會離場，而且當預計樓價下跌，遲些買會更平，何必急於入市？事實上，疫症肆虐亦嚴重限制了置業者睇樓睇舖的安排，令成交進一步萎縮，房產價格更易滑落。</p>
@@ -24,4 +26,3 @@ author: REDBRIC
 <p>姚松炎 (2019) 加按四年升258% 樓市風險大，信報財經月刊5月。</p>
 <p>姚松炎 (2020)【財經論壇】港樓勢危　樓價下跌四大原因，蘋果日報，3月25日 <a href="https://hk.appledaily.com/finance/20200325/LSQPC7OMFNNM2KANIF7GQG4CPQ/">https://hk.appledaily.com/finance/20200325/LSQPC7OMFNNM2KANIF7GQG4CPQ/</a></p>
 <p>Yiu, C.Y. (2019) Excel Forecasts a 40% Plummet of HK Housing Price! Medium, Apr 15. <a href="https://medium.com/@ecyY/2-forecasting-methods-by-excel-1991b5b7d111">https://medium.com/@ecyY/2-forecasting-methods-by-excel-1991b5b7d111</a></p>
-<p><br></p>
