--- a/_posts/2020-04-25-VOCUS-後疫症經濟-3-去全球化.html
+++ b/_posts/2020-04-25-VOCUS-後疫症經濟-3-去全球化.html
@@ -10,15 +10,16 @@ author: REDBRIC
 
 <p>事實上，自2019年美中貿易戰開始，全球已啟動3D化，即去全球化 (Deglobalization)，去中心化 (Decentralization)，及脫勾現象 (Decoupling)；然而，進程非常緩慢，雖然高層次經濟分析已開始討論3D，但一直沒有吸引到主流傳媒的注意。但2020年全球爆發世紀疫症COVID-19，不但加快了3D進程，更令中小企業和小市民也加入3D行列，或者加快本地化的工作！</p>
 <p>過去50年，尤其是自2000年中國加入世貿後，全球化(Globalization)的速度可謂空前，而且貿易高度集中在幾個經濟體，出現前所未有的世界壟斷現象，因此在各大經濟體間形成互相掛勾關係(Coupling)，高度依賴相互的資金流、人流、信息流和物流等。圖1為過去50年的全球化指數，由1970年的40上升至2019年的接近60，上升約50%。</p>
-<p>圖1 全球化指數。來源：Gygli, Savina, Florian Haelg, Niklas Potrafke and Jan-​Egbert Sturm (2019): The KOF Globalisation Index – Revisited, Review of International Organizations, 14(3), 543-​574 https://doi.org/10.1007/s11558-​019-09344-2</p>
+<img src="https://images.vocus.cc/41ee4cba-e276-4669-8f87-5b588ad4c677.png" alt="圖1 全球化指數。來源：Gygli, Savina, Florian Haelg, Niklas Potrafke and Jan-Egbert Sturm (2019): The KOF Globalisation Index – Revisited, Review of International Organizations, 14(3), 543-574 https://doi.org/10.1007/s11558-019-09344-2">
+<p>圖1 全球化指數。來源：Gygli, Savina, Florian Haelg, Niklas Potrafke and Jan-Egbert Sturm (2019): The KOF Globalisation Index – Revisited, Review of International Organizations, 14(3), 543-574 https://doi.org/10.1007/s11558-019-09344-2</p>
 <p>新加坡與香港作為高度國際化經濟體，新加坡在這期間的全球化指數升幅比全球平均數為高，亦比香港的升幅為多，因此從全球化中獲得更高的經濟成長。香港一直透過以國際城市為本位參與全球化工作 (立場新聞，2018)，但近年已出現倒退，走向區域化，可從指數中反映。</p>
 <p>在疫症前，全球化為世界經濟帶來了一段頗長時間的榮景，譬如Samimi and Jenatabadi (2014) 的研究就認為全球化為中高收入的經濟體帶來經濟增長。但與此同時，全球化亦為世界帶來新的風險和不公，包括過度集中的風險問題，在今次抗疫工作中可謂表露無遺。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/a1dfd47c-675d-41a8-bde9-70e0299f59bf.png" alt="圖2 新加坡與香港的全球化指數。來源：與圖1同">
 <p>圖2 新加坡與香港的全球化指數。來源：與圖1同</p>
-<p><br></p>
-<p>圖3 是疫症前的世界貿易往來地圖，圖4為頭18名佔世界出口貿易比例最高的經濟體，單計頭四名，即中美德日已佔全球貿易的3份1，2019年的出口貨額依次為美元24986、16452億、14865億和7058億，可見世界貿易的高度集中情況。新加坡和香港分別排名第16和第10位，2019年的出口貨額依次為美元5357億和3904億，位居2017年世界最高出口值佔生產值比率(Export-to-GDP Ratio)的經濟體的第二和第三位 (188%, 173%, see Wikipedia-Trade-to-GDP Ratio List)，反映其高度依賴全球化經濟，一旦出現去全球化，這些細小經濟體可能出現較大幅度的打擊，及須進行難度更高的經濟轉型。</p>
-<p><br></p>
+<p>圖3是疫症前的世界貿易往來地圖，圖4為頭18名佔世界出口貿易比例最高的經濟體，單計頭四名，即中美德日已佔全球貿易的3份1，2019年的出口貨額依次為美元24986、16452億、14865億和7058億，可見世界貿易的高度集中情況。新加坡和香港分別排名第16和第10位，2019年的出口貨額依次為美元5357億和3904億，位居2017年世界最高出口值佔生產值比率(Export-to-GDP Ratio)的經濟體的第二和第三位 (188%, 173%, see Wikipedia-Trade-to-GDP Ratio List)，反映其高度依賴全球化經濟，一旦出現去全球化，這些細小經濟體可能出現較大幅度的打擊，及須進行難度更高的經濟轉型。</p>
+<img src="https://images.vocus.cc/9a3b81cd-8422-4af2-b420-8ff3b03b572f.png" alt="圖3 全球貿易地圖。來源：https://resourcetrade.earth/data">
 <p>圖3 全球貿易地圖。來源：https://resourcetrade.earth/data</p>
+<img src="https://images.vocus.cc/d6ceabe0-e975-4c96-8bf1-1ba6b9620b44.png" alt="圖4 全球首18名佔世界出口貿易比例最高的經濟體。來源：https://comtrade.un.org/">
 <p>圖4 全球首18名佔世界出口貿易比例最高的經濟體。來源：https://comtrade.un.org/</p>
 <p>疫症令各國封關，限制人流，旅遊業更是冰封，物流和信息流也開始出現轉變，包括不少國家採取限制某類產品出口等。雖然這些措施可能只是短期措施，但因疫症所暴露出來的過度依賴全球化下的生產鏈對防疫所帶來的巨大風險，包括醫藥用的材料及產品供應及糧食等必需品的自給率等問題。因此，美國和日本已相繼動用國家財政協助生產商把某些生產基地搬回本國，或在採購政策上確保多於一處的供應等，已形成第一波的去中心化，和去全球化趨勢。</p>
 <p>加上有關隱瞞疫情等指控，似乎全球正在走向新冷戰階段，一旦真的出現兩方對立陣營，脫勾現象將無可避免，而由於中國正處於今次糾紛的風眼，若冷戰形成，過去30年的全球化和掛勾現象將可能逆轉，即使全球化在兩大陣營中能夠各自繼續促進各自的半全球化，但必然令全球經濟重新洗牌，新加坡和香港可能首當其衝，在轉口貿易和集資窗口等國色上急需轉型或轉向，到底可以如何自處，而兩地的政府又會選擇如何自處，大家晰目以待。其中香港在大灣區綱要中本來定位為帶隊走出去的角色 (姚，2019)，現在能否繼續已經存疑。</p>
