--- a/_posts/2020-04-30-VOCUS-城市韌性來自準確預測-1-生產總值.html
+++ b/_posts/2020-04-30-VOCUS-城市韌性來自準確預測-1-生產總值.html
@@ -17,10 +17,13 @@ author: REDBRIC
 <p>『二零一八年第二季，香港經濟保持強勁增長勢頭，按年擴張 3.5%，第一季增幅為 4.6%。由於環球經濟蓬勃，外部需求維持強勁，儘管臨近季末時似乎有所放緩。內部需求亦顯著擴張。勞工市場情況維持理想，通脹保持溫和。』(政府經濟顧問辦公室，2018)</p>
 <p>報告當時更認為『內部需求強勁，私人消費開支大幅增加，勞工市場情況理想，財富效應正面支持。』</p>
 <p>但若然今天回望過去，其實自2018年第二季起香港的經濟增長率已如江河日下，抬級而落，至2019年第三、四季終見紅。(圖1) 換言之，報告當時所指的4.6%強勁勢頭其實正是今次周期的頂峰，此後8季持續向下，至今仍未見底，2019年第一季更可能出現雙位數的跌幅。</p>
+<img src="https://images.vocus.cc/32340157-3dab-42dd-ac8f-dcc90131ad46.png" alt="圖1 香港的經濟增長率年度變化。">
 <p>圖1 香港的經濟增長率年度變化。</p>
 <p>若以季度變化來分析，經濟惡化的情況其實早應在2018年第二季已經預警，即係在報告出爐前數據已經初露端倪，但政府報告仍以『強勁增長勢頭』來形容，誤盡蒼生。圖2可見2018年第二季的季度經濟增長率其實已經出現負數 (-0.3%)，隨後更持續出現多次負增長，2019年的第二至第四季連續三季負數，正式確認香港進入經濟衰退！</p>
+<img src="https://images.vocus.cc/4527fd95-87ce-4434-988e-8f41e9462dfb.png" alt="圖2 香港的經濟增長季度變化。">
 <p>圖2 香港的經濟增長季度變化。</p>
 <p>私人消費方面，政府同樣是被2018年初的高增長率沖昏頭腦，貪勝不知輸，圖3顯示零售總值金額的年度變化，自2018年第二季起一個月差過一個月，至2018年底開始已經進入負增長區域，至今已連續一年多持續負數，且深不見底，最新數據為下跌46.7%，成為失業重災區。這與政府在2018年中的經濟預測報告中所指的『內部需求強勁，私人消費開支大幅增加』有天壤之別，當日政府原來是在懸崖邊高喊再創高峰，其預測能力之差由此可見一斑。完全錯誤的預測，當然會作出完全錯誤的準備，今次後疫症的全球經濟衰退可能為香港政府帶來一次重大考驗，需要更大幅的政策調整或者更漫長的調整期。</p>
+<img src="https://images.vocus.cc/75a1436e-4d1c-493a-96a9-2f1dddaf207e.png" alt="圖3 香港零售總值年度變化率。">
 <p>圖3 香港零售總值年度變化率。</p>
 <p>相反，我與團隊在2018年2月農曆新年期間，出了幾篇香港運程的預測文章，其有關於香港的生產總值 (GDP) 實質變化預測早已點出其明增暗降，潛藏危機之狀：</p>
 <p>『[當時市場獲得的最新數據為]2017年第3季的GDP實質年度增長率，其增長率剛回升至3.6%，比2016年的2.0%有可觀的升幅，表面看經濟似有動力，但若果大家參考長期經濟增長變化，尤其是人均經濟實質增長率，<u><strong>其實正在緩慢下跌</strong></u>。』(姚，2019)</p>
@@ -30,4 +33,3 @@ author: REDBRIC
 <p>政府經濟顧問辦公室 (2018) 二零一八年 半年經濟報告，香港特別行政區政府 財政司司長辦公室，8月。<a href="https://www.hkeconomy.gov.hk/tc/pdf/er_c_18q2.pdf">https://www.hkeconomy.gov.hk/tc/pdf/er_c_18q2.pdf</a></p>
 <p>姚松炎 (2019) 去年就香港GDP的趨勢預測如今浮現，方格子，9月26日。<a href="https://vocus.cc/eyanalysispoliecon/5d8accd5fd89780001537da0">https://vocus.cc/eyanalysispoliecon/5d8accd5fd89780001537da0</a></p>
 <p>姚松炎 Yiu, C.Y. (2020) Several Warnings of SARS-like Coronavirus Epidemic are Ignored, Medium, Feb 11. <a href="https://medium.com/@ecyY/several-warnings-of-sars-like-coronavirus-epidemic-are-ignored-9d6c5bbb34f7">https://medium.com/@ecyY/several-warnings-of-sars-like-coronavirus-epidemic-are-ignored-9d6c5bbb34f7</a></p>
-<p><br></p>
