--- a/_posts/2020-05-10-VOCUS-後疫症經濟-4-美中脫勾.html
+++ b/_posts/2020-05-10-VOCUS-後疫症經濟-4-美中脫勾.html
@@ -9,10 +9,13 @@ author: REDBRIC
 ---
 
 <p>自2000年中國入世後，美中形成一種獨特的經濟高度互相依賴的關係，曾被稱為ChinAmerica的經濟互勾(Coupling)現象，其中美國大量入口中國製造產品，形成三十年來不斷惡化的貿易逆差問題 (圖1)，終於在2019年演變成美中貿易戰，有關美中貿易差額等數據可參考我前年的分析 (姚，2018a)。</p>
+<img src="https://images.vocus.cc/acf05940-9b7e-4fe8-b51c-593f1fb77a03.jpg" alt="圖1 美中貿易逆差 1985 - 2016。來源：US Census Bureau">
 <p>圖1 美中貿易逆差 1985 - 2016。來源：US Census Bureau</p>
 <p>根據國際貿易的經濟邏輯，當兩國出現長期嚴重的貿易逆差，兩國的貨幣匯率會自動調節，美元貶值自然令到美國人減少購買中國貨，但由於中國採用貨幣掛勾制度，更大幅購買美國國庫債券，導致人民幣匯率沒有相應升值。根據2020年2月的數字，中國仍是美國的第二大單一債權國，持債高達10,900億美元，佔總額的15% (中國自2011年開始減持美債金額，圖2)。</p>
+<img src="https://images.vocus.cc/be0323b4-c86a-44a8-8fd5-3deeb107e328.png" alt="圖2 持美債的主要國家 2020。來源：Amadeo and Anderson (2020)">
 <p>圖2 持美債的主要國家 2020。來源：Amadeo and Anderson (2020) </p>
 <p>這種美中互勾(Coupling)的情況，我曾以短片的形式 (姚，2018b)，並用餐廳請客的譬喻來解釋這種互勾形式：一家餐廳無客，竟用賒數招徠，成功令生意大升，但債務也同樣大增，食客難得享有賒帳午餐，長命債長命還，反正可以控制貨幣供應及息口以減低實質債務，因而越食越多。(圖3)</p>
+<img src="https://images.vocus.cc/8dda45b7-54a5-478f-a0e8-a81cdc72ab86.png" alt="圖3 美中互勾譬喻。來源：姚 (2018b)">
 <p>圖3 美中互勾譬喻。來源：姚 (2018b)</p>
 <p>然而，近日這家餐廳因為賣野味(或其他原因)，引發疫症，傳染埋食客，食客火上心頭，不但聲言要追究，更加反目成仇，決定不再幫襯。但這樣突然脫勾 (Decoupling)，賒帳午餐減少，美債能否繼續以現息出售？會否導致加息等問題，仍是未知之數；而中國的出口訂單大減，失業率飊升，政局不穩，危機四伏！</p>
 <p>誠然，雙方都有各自盟友，東家唔買找西家，天下無不散之筵席，沒有誰是不可或缺。但這將預示因美中脫勾而演變成的全球新冷戰，雙方各自拉攏盟友，組成聯盟，排擠對方，世界貿易各自圍爐，形成去全球化 (Deglobalisation) (姚，2020)。</p>
