--- a/_posts/2020-05-10-VOCUS-後疫症經濟-5-去中心化.html
+++ b/_posts/2020-05-10-VOCUS-後疫症經濟-5-去中心化.html
@@ -10,15 +10,15 @@ author: REDBRIC
 
 <p>後疫症經濟的3D現象已開始出現，其中有關 De-globalisation (去國際化)和 De-coupling (美中脫勾)已經不能逆轉，早前我已有文章深入探討 (姚，2020A，2020B)，今次與大家討論第三項 De-centralisation (去中心化)。</p>
 <p>事實上，把產業集中於某些中心有很多優點，城市經濟學的整個基礎理論便是建基於一個「聚」字 (Agglomeration)，而城市之所以有經濟價值便在於人和產業都想聚合於城中，既可減低交通和運輸成本，專業化 (Specialisation)和規模效應 (Economies of Scale)；亦能增加串連(Networking)、知識交流(Knowledge Spillover)和創意啟發 (Idea Sharing)。因此，在過去幾十年全球出現愈來愈多的大城市，有的甚至超過一千萬人口，而且有不少研究更指出城市規模與人均經濟產值有正相關 (圖1)。</p>
+<img src="https://images.vocus.cc/4cb0540e-d01a-448a-b534-a77c0332dc28.png" alt="圖1 城市人口比例與人均經濟產值。來源：Our World in Data">
 <p>圖1 城市人口比例與人均經濟產值。來源：Our World in Data</p>
 <p>然而，風險與回報成正比的理論同樣適用於此。當產業和人口高度集中於某些地方，一旦這些地方出現危難，將對全國，甚至全人類造成災難，今次全球疫症正正反映過去幾十年的全球生產過度集中於某些國家，尤其是醫療和藥物，一旦發生疫症，產業鏈停頓，全球即面臨重大危機；加上貿易伙伴的互信漸失，貿易戰的報復行為此起彼落，生產地更加不能全部集中在不信賴的國家。</p>
 <p>正如財經學的投資組合理論 (Portfolio Theory)，概念就是來是不可把所有雞蛋放在同一個籃，必須分散風險，即使可能令整體回報減少，但可避免全軍覆沒！同樣道理，在地理分佈上也不應把所有產業放在同一地方生產，有效解決地區風險問題，及貿易戰等問題。其實自從美中貿易戰開打，美企已開始去中心化，把產業分散到其他地區，但速度緩慢，規模細小。但經過今次疫情，痛定思痛，加上有國家付費搬遷，甚至有命令必須遷出，勢必令全球去中心化加速，並出現新一波的產業鏈重組。</p>
 <p>我曾在(姚，2011)推演出名為「空間投資組合理論」 (Spatial Portfolio Theory)，為減少不確定因素而帶來的成本增加，會選擇在地理空間上的平衡點，避免集中於中心，因而產生去中心化。誠然，當時主要是討論個人的住屋與工作地點的選擇，但同樣適用於產業鏈的去中心化，相信隨著產業的搬遷，資金的流向也會跟隨出現微妙的變化，令到金融中心也可能出現轉移。</p>
+<img src="https://images.vocus.cc/66c1d705-3bb6-4e37-bd72-9fb42a3def62.png" alt="圖2 姚 (2011) 空間投資組合理論文章的封面。">
 <p>圖2 姚 (2011) 空間投資組合理論文章的封面。</p>
 <p>近日經常聽到有關另組國際組織的建議，包括建立成功抗逆圈、互信貿易伙伴計劃、世界可靠衛生組織等，這些都是在檯面討論的國際去中心化新秩序，還有很多不為人知各自進行中的去中心化進程，包括機構的搬遷和採購機構清單的變更等都在檯底進行，過程不一定大鑼大鼓，而且需時可能較長，以免突然影響生產和銷售。香港的老一輩中有不少都曾有管理和搬遷產業鏈的經驗，當年80年代香港的工廠北移，大量生產線和技術搬遷，過程中經常遇到不同問題，因此大多是一小步一小步進行，並且採用兩地同時生產的模式，直至內地工人完全上手，然後才開始全面停止香港廠房的運作，動輒都用上五年時間，相信今次的全球去中心化亦同樣需要很長時間才能完成這一程序；但城市的興衰卻在這過程中不知不覺地轉變，相信大家都有同感。</p>
 <p>參考</p>
 <p>姚松炎 <strong>Yiu, C.Y.</strong> (2011) A Spatial Portfolio Theory of Household Location Choice, <em>Journal of Transport Geography</em>, 19(4), 584-590.</p>
 <p>姚松炎 (2020A) 後疫症經濟 3 - 去全球化，方格子，4月19日。<a href="https://vocus.cc/eyanalysispoliecon/5e9b6e4efd89780001b8834e">https://vocus.cc/eyanalysispoliecon/5e9b6e4efd89780001b8834e</a></p>
 <p>姚松炎 (2020B) 後疫症經濟 4 - 美中脫勾，方格子，4月25日。   <a href="https://vocus.cc/eyanalysispoliecon/5ea38ae3fd897800019bd435">https://vocus.cc/eyanalysispoliecon/5ea38ae3fd897800019bd435</a></p>
-<p><br></p>
-<p><br></p>
