--- a/_posts/2022-04-21-VOCUS-俄烏戰爭-俄國敗-中共輸-拜登錯.html
+++ b/_posts/2022-04-21-VOCUS-俄烏戰爭-俄國敗-中共輸-拜登錯.html
@@ -9,14 +9,12 @@ author: 透視中國
 ---
 
 <div class="draft-block draft--p left">作者：方涵 </div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=koslFxMU-vc"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/koslFxMU-vc" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p left">自2月21日俄軍全面入侵烏克蘭至今已近兩週。大家知道，戰爭短期拼的是軍力，長期拼的是財力。從目前局勢發展的情況看，俄國將面臨敗局，中共將面臨輸局，拜登將吞嚥錯局的苦果。</div>
 <h3 class="draft-block draft--h3" name="header-br86q">（一）俄國的敗局</h3>
 <div class="draft-block draft--p left">從純軍事角度看，目前烏克蘭還會經歷一段相當痛苦和黑暗的煎熬；但從戰略角度看，俄軍一全面入侵烏克蘭就注定了它的敗局。原因是俄國的戰略目標是在烏克蘭換個親俄政府，但採用的手段卻是武力入侵。殺戮只能換來仇恨，不能換來親近，這導致俄國的戰略目標和達成手段從一開始就自相矛盾了。</div>
 <div class="draft-block draft--p left">就算俄國短期內佔領了烏克蘭，建立了傀儡政府，只要無法贏得烏克蘭人的真心認可，俄軍一撤，傀儡政府馬上面臨垮台和清算。如果俄國長久駐軍，龐大的軍費、國際壓力，國內經濟等各方面的負擔都是俄國難以承受的。普京的這個戰略錯誤，只有烏克蘭人被槍砲、恐懼嚇破膽，迅速投降，才能歪打正著。但現在烏克蘭民眾表現出的不畏生死守衛家園、守衛自由的決心，已經令俄國的失敗只是時間早晚和規模大小的問題了。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3000px" class="image-block-prerender" data-src="https://images.vocus.cc/5fc7394a-8631-4a60-b87f-44f507e1270d.jpg" data-width="3000" data-height="2250" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">烏克蘭與俄羅斯的軍事實力對比</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/5fc7394a-8631-4a60-b87f-44f507e1270d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">烏克蘭與俄羅斯的軍事實力對比</figcaption></div>
 <div class="draft-block draft--p left">從表面上看，俄國總兵力90萬，裝備比較現代化；烏克蘭總兵力不到20萬，武器還是以蘇聯時代的老舊貨為主。在現代戰爭中極其關鍵的製空權，俄國空軍有16萬人，4000架戰機；烏克蘭空軍只有4.5萬人，戰機225架，幾乎都是舊型號；烏克蘭的海軍幾乎沒有，而俄國租借的烏克蘭境內克里米亞島上，駐紮著俄國四大艦隊中的黑海艦隊。開戰前，普京和西方各國都認為，一旦俄國從北、東、南三面夾攻，烏克蘭內無兵，外無援，投降就是分分鐘的事。美國和北約的袖手旁觀就是基於此判斷。</div>
 <div class="draft-block draft--p left">令人意想不到是，由於烏克蘭人的頑強抵抗，至今首都基輔還未被俄軍佔領，其境內的眾多大城市也都未被攻占並保持著通訊、水電、醫院等基礎功能的運行。戰局的長期化，不但凸顯了俄國戰略和手段的南轅北轍，也令其財力不足的命門暴露了出來。由於俄軍三面進攻，各方都需要獨立的空軍支援和後勤補給線，每日耗資巨大。據英國情報機構估算，俄軍每天的戰爭軍費高達200億美元，2021年俄國全年軍費只有不到680億美元，只夠打3～4天，2021年全年能源出口1100億美元，也就夠打6天。當然英國的估計可能有誇大，俄國也還有些儲備資金，但如此數量級的軍費，已遠超俄國的承受能力了。</div>
 <div class="draft-block draft--p left">可能是看到了俄國的這個致命弱點，在戰前對普京畏畏縮縮的歐美各國馬上一致行動起來，2月26日聯合宣布把俄國主要銀行踢出國際金融SWIFT系統，以此阻斷俄國和世界的資金往來，此措施一出就引發了俄國國內居民大量提取美元和盧布的恐慌。 2月28日週一外匯市場一開盤，盧布對美元的匯率就跌到了105：1，目前在120到105區間震盪，相較2021年底的盧布貶值了30%以上。相當於俄國2021年1.7萬億美元的GDP，2個月內損失了5000多億美元的購買力，相當於俄國8年的軍費。</div>
@@ -26,7 +24,7 @@ author: 透視中國
 <h3 class="draft-block draft--h3" name="header-djgr6">（二）中共的輸局</h3>
 <div class="draft-block draft--p left">中共背後支持俄國入侵烏克蘭，順便對西方來個火力偵察：看看美歐各國、各種利益團體如何博弈；西方各種反製手段的形式和力度怎樣；現代戰爭打起來會遇到甚麼情況，為它將來入侵台灣做參考。如果俄國在烏克蘭進展順利，不但可以在西方的腹地歐洲吸引住歐美的精力、財力、國力，從而無法再對中共這個美國的頭號對手施壓，還可能迫使歐美求助中共抗俄，中共就可以再靠出賣俄國，為日後挑戰美國地位贏取寶貴的時間和機遇。</div>
 <div class="draft-block draft--p left">但烏克蘭人民的頑強抵抗，導致局勢突變，原打算吃瓜看戲的中共突然成了此次事件的大輸家。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/fec3718e-ae3d-418e-8f65-2034e12de8f3.png" data-width="800" data-height="450" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/fec3718e-ae3d-418e-8f65-2034e12de8f3.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div>
 <div class="draft-block draft--p left">如果打開中共擴展國際勢力的路線圖，「一路一帶」，就可以看到，其水路和陸路兩條交通線的交匯點，是荷蘭的鹿特丹港，沿途經過希臘、意大利、德國、荷蘭、波蘭、烏克蘭等諸多歐洲國家，這不但是中共商品出口全球的物流線，也是將來用數字人民幣挑戰美元霸權的體外金融錢脈。俄國入侵烏克蘭後沒有取得速勝，在譴責俄國的問題上，中共左右為難，只好靠外交辭令、蛇鼠兩端。但這已經激怒了歐洲各國，對侵略暴行的默不作聲，就是對侵略者的支持。現在無論俄烏戰爭的勝負如何，中共的「一路一帶」，在歐洲方面的佈局已全面失敗，而這條歐洲線是「一路一帶」的核心。中共圍繞「一路一帶」在貿易、金融、外交、意識輸出、內政方面的損失，已經大到了無法用金錢來衡量的程度。當下中國留學生在烏克蘭被敵意對待，向中領館求救又沒有回應的困境，就是中共在歐洲外交大敗的一個小小反應。</div>
 <div class="draft-block draft--p left">在亞太局勢中最重要的台灣問題上，俄國的失敗將極大地鼓舞台灣人對抗中共的信心。大家知道，跨海作戰的難度遠高於陸地作戰。如果俄國在入侵烏克蘭的時候，三面陸軍大舉進攻都難以奏效，中共要跨越平均180公里寬的台灣海峽登陸作戰取勝，按中共現在的軍力，很多人都看清了，這是個無法完成的任務。只要台灣不出現中共的代理人政府，中共就將失去靠武力威脅台灣和美國討價還價的一張大牌，同時台灣將贏得更大的國際生存和發展空間。中共還得在國內平復它煽動起來的大陸民眾對台動武的激情。</div>
 <div class="draft-block draft--p left">在經濟方面，2021年中國民間消費極其疲軟，經濟增長最主要的支柱就是對外出口。 2021年，中歐之間的進出口貿易1.2萬億美元，其中包括中俄之間的1400億貿易額。中共在烏克蘭問題上，為了12%的市場份額，得罪了另外88%的客戶，實在是步蠢棋。 2022年中國經濟會更加減速，而歐洲戰爭的槍砲聲，令石油價格衝上$110/桶，創2008年金融危機以來的新高；鋁、鋅、天然氣、糧食、芯片等中國需要進口的大宗商品價格也出現暴漲，加劇大陸物價飆升的壓力。如果再疊加上出口放緩和房地產融資危局，2022年中共在經濟上將面臨極大的壓力。如果此時，還要大撒幣支持它在世界大國中的唯一夥伴——俄國，只會令中國老百姓的生活更加艱難。</div>
