--- a/_posts/2019-06-01-VOCUS-美中開戰-香港慘變戰場.html
+++ b/_posts/2019-06-01-VOCUS-美中開戰-香港慘變戰場.html
@@ -10,12 +10,15 @@ author: REDBRIC
 
 <p>美中貿易戰進入第二階段，今年5月中美國再向中國輸美的2000億美元貨品徵收特別關稅，中國隨即宣佈對美國輸華600億美元貨品加徵關稅報復，6月1日起生效，貨品清單多達5000多項。兩大國開戰，雙方自恃經濟下滑的承受能力較高，敢於打持久戰，可憐香港經濟所受的影響已經浮現，前景堪憂。但雙方角力，似乎不惜犧牲香港，港府近日一反常態，不但在十多萬市民上街及國際群起反對的情況下仍要硬推逃犯條例修訂，日前港府更聲言不會理會美國對伊朗的石油制裁令，容許可能是載滿伊朗石油即將來港的Pacific Bravo油船，擺明與美國對著幹，大有不惜冒著美國取消香港特別關稅區地位的風險，港府亦要亮劍之勢！</p>
 <p>先講講香港的經濟最新情況，恆指已從5月3日的近期高位30081下跌了超過3000點，5月31日收市為26901。剛公布的整體零售金額指數更加連續三個月出現年度下跌，4月份跌幅為-4.5%。經濟產值年度增長率更加遠低於預期，2019年第一季的經濟增幅只剩0.6%，而且主力依靠政府支出大幅增加而來，有點故意死撐的味道。而最新公布有關3月份的香港公司破產宗數，一舉打破22年來的紀錄，達到20646宗。(圖1) 情況仍未反映第二輪的美中貿易戰戰況，相信要到7月公布5月份的數字，才有進一步的分析。</p>
+<img src="https://images.vocus.cc/147a0372-3a41-4ac5-b7f1-5f9722a766e7.png" alt="圖1 香港的公司破產宗數。來源：https://tradingeconomics.com/hong-kong/bankruptcies">
 <p>圖1 香港的公司破產宗數。來源：https://tradingeconomics.com/hong-kong/bankruptcies</p>
 <p>當然，貿易戰的最直接影響必然是進出口貿易，而我上月初已經作出中期盤點，當時仍未公布第二階段貿易戰，但進出口金額的量子指數已經錄得連續四個月下跌。[1] 最新公布3月份數據繼續下跌-2%和-3% (圖2)，加上5月份貿易戰進入第二階段，最新的進出口情況凶多吉少！</p>
+<img src="https://images.vocus.cc/9b3d3f5a-44be-4132-8934-353ed82793f9.png" alt="圖2 香港最新進出口統計數據，來源：https://www.censtatd.gov.hk/hkstat/sub/so230.jsp">
 <p>圖2 香港最新進出口統計數據，來源：https://www.censtatd.gov.hk/hkstat/sub/so230.jsp</p>
 <p>然而，香港若能繼續保持高度國際化的優勢，短期的經濟陣痛應該沒有大礙，但若果香港政府不珍惜香港得來不易的國際化地位，要向國際宣戰，不但想強推逃犯條例修訂，令全球來港人士增加被引渡返中國內地的風險，更加想挑釁美國，公然違反美國的制裁令，逼令美國國會和總統宣佈取消香港特別關稅區地位，並通過把美港政策法提升為美港人權與民主法，香港一旦被國際孤立，政治與經濟的打擊恐難以承受，更加負擔不起持久戰的成本。</p>
 <p>國際社會對逃犯條例修訂的反對聲音不絕於耳，而且級別之高可謂前所未見，包括美國國會議員聯署反對，歐盟更向港府發出外交照會，英國與加拿大外交官員發出聯合聲明反對，台灣政府公開反對香港的逃犯條例修訂，並明言不接納以此作為引渡逃犯的安排，另外還有6國國會議員聯署反對 [2]；可惜港府把多年來建立的國際信任和國際朋友的循循善誘視為敵意干預，反面不認人；5月30日香港商務及經濟發展局更公然『回應說，香港只會按照中國外交部的指示，履行聯合國安理會決議要求的相關制裁，目前聯合國安理會沒有就伊朗出口施加任何限制，這只是「個別國家可能基於自身考慮，向某些地方施加的單方面制裁」。』[3] 簡直是火上加油，但字裡行間似乎反映這是北京的意旨，香港被推上死亡戰車，為國捐軀！</p>
 <p>有關懷疑運載伊朗石油的船隻，名為 Pacific Bravo (IMO 9206035)(圖3)，自5月28日報稱在斯里蘭卡以南向東面航行後，突然失去位置更新資料。據美方向路透社發放的信息，船隻是一月份才轉手中資崑崙銀行，該銀行相信是中方與伊朗石油交易的主要銀行；報導進一步指出West of England已經於5月27日取消該船的保險。[4]</p>
+<img src="https://images.vocus.cc/28bdfc31-0971-4c6e-89ec-3d178ddfebbf.jpg" alt="圖3 Pacific Bravo 油船。來源：https://www.marinetraffic.com/en/photos/of/ships/shipid:714542/#forward">
 <p>圖3 Pacific Bravo 油船。來源：https://www.marinetraffic.com/en/photos/of/ships/shipid:714542/#forward</p>
 <p>而新加坡的國際關係研究學者James Dorsey (2019)分析認為今次的伊朗油船問題可能是美中貿易戰談判破裂的中方回應 (The latest move could possibly be in response to a recent breakdown in U.S.-Chinese trade talks.) [5]，說明這是拖香港落水陪葬之舉！</p>
 <p>必須指出，油船完全沒有必要來港，今次油船若真的來港，似乎是一次故意挑釁的外交行為，因為Dorsey (2019) 指出，事實上早前有另一艘運載伊朗石油的船隻，名稱為 Marshal Z，己在舟山附近卸下13萬噸石油 (A second tanker, the Marshal Z, was reported to have unloaded 130,000 tonnes of Iranian fuel oil into storage tanks <a href="https://www.reuters.com/article/us-iran-sanctions-fueloil-china-exclusiv/exclusive-tanker-unloads-iranian-fuel-oil-at-china-port-after-near-five-month-trek-data-idUSKCN1SM09R">near the Chinese city of Zhoushan</a>) [5]，那麼為什麼今次不去舟山，或者珠三角任何一個港口，而要取道香港？</p>
