--- a/_posts/2021-08-28-VOCUS-美港人權民主法案與美港政策法的關聯.html
+++ b/_posts/2021-08-28-VOCUS-美港人權民主法案與美港政策法的關聯.html
@@ -15,6 +15,7 @@ author: REDBRIC
 <p>根據美國國會網站的資料，該法案於2017年2月16日提上Senate，s.417 - 115th Congress (2017-2018) ，目的為修訂1992年的美國-香港政策法，指令國務院向國會每年匯報香港情況，以確定香港有足夠自治以讓香港可享有有別於中國內地的優惠；並可限制那些破壞香港人權自由的中國和香港官員入境美國，及凍結官員的在美資產。 [2]</p>
 <p>至2018年尾，香港眾志前主席羅冠聰前往美國喬治城大學（Georgetown University）發表題為「香港步向獨裁（The State of Hong Kong’s Authoritarian Turn）」的演講時指出：這次行程會見了不同的國會參眾議員，講論《香港人權與民主法》，因該法案能使美國當局思考對港政策時，有更多選擇和彈性。[3]</p>
 <p>2019年5月羅冠聰出席CECC就港府擬修訂《逃犯條例》舉辦的聽證會，呼籲美國向港府施加更多壓力，促其撤回修訂《逃犯條例》。CECC議員Chris Smith在會上指出：「計劃再次推動《美國-香港人權與民主法案》。如果香港要成為另一個中國大陸城市，美國將不得不重新評估香港是否根據美國法律享有特殊地位 (即檢討美港政策法)。」</p>
+<img src="https://images.vocus.cc/3a9711e7-ee33-4a2c-9220-ccbfbdff6336.jpg" alt="圖1 CECC就港府擬修訂《逃犯條例》舉辦的聽證會。CECC主席、眾議員Jim McGovern（主席台右三），CECC共同主席魯比奧（Marco Rubio ）（右二），美國會及行政當局中國委員議員 Chris Smith（右一）[4]">
 <p>圖1 CECC就港府擬修訂《逃犯條例》舉辦的聽證會。CECC主席、眾議員Jim McGovern（主席台右三），CECC共同主席魯比奧（Marco Rubio ）（右二），美國會及行政當局中國委員議員 Chris Smith（右一）[4]</p>
 <p>今次美國國會重提《美國-香港人權與民主法案》得到國會跨黨派議員支持，CECC主席麥高文認為現時國會議員更聚焦香港人權的考量，若法案再度放上議程，將可獲更大力推動通過（I ensure you when it is introduced there would be greater push to move it）。[5]</p>
 <p>#美港政策法 #美港人權民主法案 #眾志羅冠聰</p>
@@ -32,5 +33,3 @@ author: REDBRIC
 <p>[3] 阿波羅新聞 (2018) 代黃之鋒訪美領取人權獎 羅冠聰促通過香港人權民主法，12月6日。https://tw.aboluowang.com/2018/1206/1214183.html</p>
 <p>[4] 大紀元時報 (2019) 美針對逃犯條例辦聽證會，5月17日。https://hk.epochtimes.com/news/2019-05-17/76455737</p>
 <p>[5] 羅冠聰 (2019) FB網頁，5月20日。https://www.facebook.com/NathanLawKC/posts/1821935884624403</p>
-<p><br></p>
-<p><br></p>
