--- a/_posts/2022-04-21-VOCUS-中俄關係-敵之敵亦敵.html
+++ b/_posts/2022-04-21-VOCUS-中俄關係-敵之敵亦敵.html
@@ -9,18 +9,17 @@ author: 透視中國
 ---
 
 <div class="draft-block draft--p left">作者：方涵</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=K1L3kTqytUo"></div>
+<iframe src="https://www.youtube.com/embed/K1L3kTqytUo" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p left">自2月21日俄軍全面入侵烏克蘭以來，受中共長期宣傳的「敵人的敵人就是朋友」的說辭影響，很多中國人熱烈支持俄國。其實判斷對方是敵是友，只要看雙方交往對己方受害多還是受益多就一目了然，根本不用靠對方和第三方的敵友關係來評判。例如，村東的人販子把女村民販賣到徐州豐縣當性奴，村西的人販子把男村民販賣到柬埔寨當血奴，兩夥兒人販子為爭地盤大打出手，雙方誰是村民的朋友？都是敵人。中國和俄國之間的很多事，涉及到了中共賣國的黑歷史，一直被有意低調處理著，今天我就把這些史實幫大家梳理一下。</div>
 <h3 class="draft-block draft--h3" name="header-556sn">一、俄國刻意肢解中國</h3>
 <div class="draft-block draft--p left">在中國歷史上，沒有任何國家對中國領土的侵占能同俄國相比。 1858年5月28日，俄國借英法艦隊攻佔大沽口，逼近京津的時點，以「助華防英」為名，逼迫清政府簽訂《璦琿條約》，把黑龍江以北、外興安嶺以南60多萬平方公里領土劃歸俄國，這是中國歷史上被侵占的最大一塊領土，中國還因此失去了面向鄂霍次克海的出海口。</div>
 <div class="draft-block draft--p left">1860年，俄國以英法聯軍攻入北京時當過調停人為名，逼清朝簽訂《北京條約》，將黑龍江以北，烏蘇里江以東土地（包括海參崴）永久歸屬俄國，中國第一次徹底失去了日本海的出海口。大家知道廣東陸地面積18萬平方公里，水域面積卻高達42萬平方公里，是陸地面積的2倍多。中國失去外興安嶺的陸地後，同時還失去了相鄰的12海里的領海和最大200海里的專屬經濟區。所以俄國對中國的掠奪，絕不是簡單搶佔一些領土那麼簡單的，而是有計劃、有步驟地在東北徹底將中華民族與海洋水道切割開。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1000px" class="image-block-prerender" data-src="https://images.vocus.cc/57468bc9-b40f-4faa-b334-a9bcb39d758d.jpg" data-width="1000" data-height="636" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/57468bc9-b40f-4faa-b334-a9bcb39d758d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div>
 <div class="draft-block draft--p left">1864年沙俄再逼清政府簽訂《中俄堪分西北界約記》，又割佔了中國西北44萬平方公里土地。到19世紀末，沙俄從中國共搶走了154萬平方公里的國土，相當於43個台灣。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1096px" class="image-block-prerender" data-src="https://images.vocus.cc/f09fd6e3-142d-4d0e-93fe-8c228bcf879f.jpg" data-width="1096" data-height="810" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f09fd6e3-142d-4d0e-93fe-8c228bcf879f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div>
 <div class="draft-block draft--p left">這還沒完，1945年中國人經過8年艱苦卓絕、損失慘重的抗日戰爭，成為二戰的戰勝國之一。在同年2月，英美蘇三國在雅爾塔會議上劃分戰後國際勢力，蘇聯提出要外蒙古保持獨立，不能回歸中國，理由是：防止中國國力恢復後，會從外蒙威脅蘇聯西伯利亞腹地的運輸線安全。這和現在俄國入侵烏克蘭的藉口一模一樣。雅爾塔會議又使中國失去了156萬平方公里的國土。合計下來，俄國共使中國失去了310萬平方公里的國土，相當於現在中國大陸國土面積的1/3。在中國歷史上，從沒被任何一個國家掠奪走過這麼多的領土。</div>
 <h3 class="draft-block draft--h3" name="header-5u2mv">二、中共和蘇聯簽署賣國條約</h3>
-<div class="draft--imgNormal draft-block"><div><div style="height:1056px" class="image-block-prerender" data-src="https://images.vocus.cc/36e67ca8-15e3-4ba2-b9d0-3eddaf7001c7.jpg" data-width="1056" data-height="616" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/36e67ca8-15e3-4ba2-b9d0-3eddaf7001c7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div>
 <div class="draft-block draft--p left">有人可能想，那是中國以前羸弱，1949年後，中國人民就站起來了，不受欺負了。事實恰恰相反，1950年2月12日，中共總理兼外交部長周恩來和蘇共外交部長維辛斯基，在莫斯科秘密簽署了《中蘇友好同盟特別協定》，這裏摘幾條給大家看看中共是多麼的喪權辱國：</div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">第十七條：締約國雙方同意，內蒙，新疆，西藏，建立各民族的人民共和國，由雙方共同負責扶助其獨立。</span></div>
 <div class="draft-block draft--p left">有沒有聞到今年2月21日，普京宣布支持烏克蘭東部頓內茨克和盧甘斯克兩個地區獨立的熟悉味道？新疆、西藏、內蒙面積近400萬平方公里，如果再分割出去，中國國土就剩一半了。中國地勢是西高東低，北高南低，了解軍事地理的人可能知道，歷史上絕大多數統一中國的王朝都是從北向南攻擊，席捲全國。如果蘇軍像從白俄羅斯邊界出兵攻擊烏克蘭首都基輔那樣，從獨立的內蒙、西藏出兵攻擊中國腹地的平原地區，中華民族面臨亡國滅種，絕非危言聳聽。就這樣的條款，中共都能同意蘇聯的要求，說它是中國史上第一大賣國賊，當之無愧。</div>
@@ -36,7 +35,7 @@ author: 透視中國
 <div class="draft-block draft--p left">20世紀60年代後期，由於蘇聯想軍事化控制中國，雙方開始交惡。 1969年3月，中、蘇兩國軍隊在界河烏蘇里江珍寶島爆發衝突，雙方動用了坦克、裝甲車、飛機、火箭炮，反坦克炮，岸上縱深火砲等輕重武器，最終中方以蘇軍傷亡152人，中國邊防軍傷亡92人的代價佔領了珍寶島，隨後蘇聯發布準備對中國的核設施進行打擊的威脅，珍寶島之戰幾乎導致了中蘇兩個共產大國之間爆發全面戰爭。</div>
 <div class="draft-block draft--p left">20世紀70年代，已經和美國進行了20多年冷戰的蘇聯，同埃及、印度、伊拉克、越南等12國簽訂「友好協作合約」，在全球擴展其勢力範圍。為拉攏中國對抗蘇聯，美國總統尼克松於1972年秘密訪華，中美於1979年1月1日正式建交。同年2月，復出的鄧小平發動對蘇聯盟友越南的戰爭，從背後給蘇聯狠插了一刀，同時也向歐美遞交了重回世界秩序的投名狀。此後海外投資開始大量進入中國，挽救了被文革搞得瀕臨崩潰的大陸經濟。 1980年莫斯科舉辦奧運會，中國與美國為首的西方國家一起加入了抵制的陣營，抗議蘇聯入侵阿富汗。 11年後，蘇聯解體，冷戰以美方獲勝告終，這其中也有中國從背後牽制蘇聯的功勞。</div>
 <div class="draft-block draft--p left">1989年6月，雙手沾滿學生鮮血的江澤民上台後，於1991年5月16日在莫斯科簽訂了《中蘇國界東段協定》，使中國永久失去了索回北方100多萬平方公里國土的權利。江澤民還向俄國表示要永做「好鄰居、好夥伴、好朋友」，中共以為俄國會答應修建從安加爾斯克到中國大慶的2,400公里的輸油管線（即「安大線」）。但普京處於地緣戰略的考慮和日本的遊說，最終決定從泰舍特修建一條通往海參崴附近的納霍德卡的石油運輸管道（即「泰納線」），一來打通向整個東南亞賣油的線路，二來以避免中國成唯一買家，掌握話語權。為安撫中共，俄國答應在年運量8000萬噸原油的「泰納線」中間，修一條通向中國的支線，為此中共還給當時幾乎無法在國際金融市場上融到資金的俄國，提供了60億美元的貸款。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:920px" class="image-block-prerender" data-src="https://images.vocus.cc/b09c1556-fea5-4150-aa4e-9b122644310b.jpg" data-width="920" data-height="674" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b09c1556-fea5-4150-aa4e-9b122644310b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網絡圖片</figcaption></div>
 <div class="draft-block draft--p left">2018年由於中美關係交惡，中共轉向俄國進口豬肉，俄方並未言明非洲豬瘟正在其境內肆虐。同年8月，非洲豬瘟疫情在遼寧的瀋陽爆發，隨後蔓延全國。到2019年8月底，中國大陸的生豬存欄量下降約40%，造成的經濟損失超過1萬億元人民幣，並對中國經濟產生嚴重衝擊，由於豬肉等民生物資價格暴漲，通貨膨脹率在2020年1月達到5.4%的高點。中共被迫再從海外大量進口肉類填補供應缺口，間接導致世界食品價格當年上漲近10%，全球肉品價格飆漲18%。</div>
 <div class="draft-block draft--p left">2019年9月，普京訪問蒙古，邀請其加入由俄羅斯所主導的集體安全防務組織。俄國一方面發展與中國的經貿關係賺錢；另一方面，在軍事上建立環繞中國從西到北的聯盟，對中國形成壓制。</div>
 <div class="draft-block draft--p left">2020年5月開始，中印雙方在西藏加勒萬河谷等地發生激烈肢體衝突，雙方都有人員傷亡。同年6月俄國同意提前向印度交付一批S400防空飛彈，並已授權印度國造生產272架蘇-30戰機。而俄方賣給中國的蘇-30戰機，不但不授權生產，還把關鍵零部件焊死，防止中方拆解產品進行山寨。俄羅斯時事評論人士尼科里斯基指出，雖然中俄兩國官方都一致對外宣稱雙邊關係很好，但中俄實際關係與官方宣傳渲染的完全是兩樣。</div>
