--- a/_posts/2022-04-21-VOCUS-北方之星-一代女皇-catherine-the-great.html
+++ b/_posts/2022-04-21-VOCUS-北方之星-一代女皇-catherine-the-great.html
@@ -9,7 +9,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
 <h3 class="draft-block draft--h3" name="header-9a10j">「如果遇見不幸，那就鼓起勇氣去超越；即便眼前一片慘澹，人也可以快樂勇敢。」</h3>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/2eee02dd-623e-479b-ba4b-bd685912fc86.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2eee02dd-623e-479b-ba4b-bd685912fc86.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">「一代女皇」，武…<span style="font-weight: bold; ">凱薩琳大帝（Catherine the Great，1729 - 1796；在位：1762－1796）</span></div>
 <div class="draft-block draft--p left">仰望璀璨銀河，<span style="font-weight: bold; ">黃道星相此刻緩緩踏入了由「火神星」（Vulcan）所守護的金牛宮，處世慎重、堅忍不拔，好勝不餒又追求事物之完美，正如凱薩琳大帝一生的寫照</span>。生卒年與清王國乾隆皇（b.1736）、美國「國父」華盛頓（b.1732）等人同梯同期，凱薩琳可說是東西方歷史上相當罕見，能獲得和男性領導人相等之「大帝」封號的女性國家元首，更是帶領俄羅斯帝國以開明專制、富國強兵，擠身成歐陸超級一線列強之林的曠世君主…她所主政的時代，今日已被認定是俄國得以從歐亞邊陲翻身的重要關鍵。</div>
 <div class="draft-block draft--p left">原名Sophie，父親為神聖羅馬帝國轄下一名小小親王的她，誕生在北德普魯士斯賽辛（Szczecin，位於今波蘭境內），16歲即遠嫁俄國王儲成為大公妃子。攤開手邊的地圖，直線距離高達1,500公里之遙的異國聯姻下，Sophie期許自己能快速融入俄國文化，促進兩國邦誼，所以不只討好王室長輩，認真修習俄文，閱讀各類書籍，也積極與當地的權貴、仕紳們交流互動，建立起私下良好的關係...</div>
@@ -19,25 +19,24 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">彼得雖然落馬失勢，但厄運似乎沒有放過他，一個星期之後，<span style="font-weight: bold; ">被史學家判定有男性性功能障礙的ex彼得三世，因「痔瘡惡化」（官方說法）不幸身亡</span>…至於其他的皇位競爭者呢？早就通通被軟禁起來了，<span style="font-weight: bold; ">Sophie，金牛座，毫無疑問。</span></div>
 <div class="draft-block draft--p left">西元1762年9月下旬，Sophie，年方三十出頭的微熟風韻，加冕大位，戴上了俄羅斯帝國第一次使用的帝王冠冕（<span style="font-weight: bold; ">由金、銀兩個半球組成，象徵東、西羅馬帝國；桂冠上有75顆鑽石和4,936顆印度鑽石所組成的月桂和橡樹葉。冠頂還有一個鑽石十字架和一顆重達398.62克拉的紅寶石</span>），<span style="font-weight: bold; ">以女皇帝的身分君臨天下、統御四海、捨我其誰、唯我獨尊…（有點像房地產的代銷廣告）。</span></div>
 <div class="draft-block draft--p left">在遠嫁俄羅斯，同時登基為一國之主後，念舊的女皇其實一直與西歐各國皇室，也是自己的遠親們保持友好聯繫，並和多位當代名哲往來密切，除親自資助伏爾泰（Voltaire）長達15年外，這位「啟蒙運動」（Enlightenment）大師口中的「北方之星」，凱薩琳大帝在西歐哲學思想的薰陶下，決定召集來自俄國各階層（官僚、貴族、資產階級、農民）共652人的代表團，組成大委員會，期盼能討論出一部適合俄國推行的法典。後來在其任內，<span style="font-weight: bold; ">她陸續頒布《俄羅斯帝國行省行政法令》、《商業航行法案》、《鹽業貿易法案》與《國立教育法令》等。誠如寫給伏爾泰的信中所提到，凱薩琳大帝試圖透過法令的修正與落實，讓俄國有「一點點」的進步。</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/d81b6e57-af09-4107-a3c5-67ef44e52079.jpg" data-width="800" data-height="1011" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d81b6e57-af09-4107-a3c5-67ef44e52079.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3" name="header-8i319">「我大聲讚美，輕言責備。」</h3>
 <div class="draft-block draft--p left">即使主張振興教育、廣設醫院、保護藝文、改革社會，但另一方面，凱薩琳大帝仍然以嚴厲、高壓（金牛座，呵呵）的法制手段來做為治理的工具…西元1773到1775年間，俄國遭遇了假託彼得三世未死而發起的大規模農村動亂「普加喬夫起義」（Pugachev's Rebellion），但最終被凱薩琳大帝派兵鎮壓下來，也穩固了她的政權合法性。</div>
 <div class="draft-block draft--p left">至於在外交軍事部分，在凱薩琳大帝的統治之下，俄國領土對外足足擴張了近52萬平方公里之多，等於差不多一個西班牙的大小！期間三次重兵橫掃波蘭，也大軍開拔土耳其，取得黑海沿岸肥沃土地，令鄂圖曼帝國放棄克里米亞汗國的宗主權。亦帶領著俄國軍事勢力南下，<span style="font-weight: bold; ">成功跨入歐洲大陸，躍身歐陸各國當年不可（敢）忽視的新興霸主！</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/8db928fa-6064-4489-b1f9-6e8b2e8f3f7a.jpg" data-width="1920" data-height="995" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8db928fa-6064-4489-b1f9-6e8b2e8f3f7a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">值得一提的是，認真說起來，當時的俄羅斯文化圈在歐洲傳統貴族的眼中，屬於較「不入流」、「咖沒水準」的國家，所以好勝心強的凱薩琳大帝，特別開設女子學院「斯莫爾尼宮」（Smolny Institute），<span style="font-weight: bold; ">這是全俄第一所貴族女子學校，也是全歐第一所女子高等學校！</span>藉由學習純正的法語、音樂、舞蹈，以及對君主的忠誠度，加上浸淫各項藝文活動的教導，專門培育出俄羅斯版的貴婦名媛，也悄悄改變了歐洲貴族對俄國人的刻板印象。而且在嚴格的紀律規範下，「斯莫爾尼宮」內部禁止奔跑嬉戲，也特意修建得較「寒冷」一些，雖說這裡位於聖彼得堡市（Saint Petersburg）近郊，北緯已經將近60度，但當年建造時的理念非常簡單：<span style="font-weight: bold; ">「過度溫暖」和「過度玩樂」同樣對身體健康有害。</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/8f4b683f-2d2f-453a-a70c-cc40baa0b77a.jpg" data-width="1280" data-height="874" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8f4b683f-2d2f-453a-a70c-cc40baa0b77a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">「壽衣應為白裙，頭上應有金冠，上刻朕的教名。喪期最長六個月，越短越好。」</span></blockquote>
 <div class="draft-block draft--p left">，事先預留的遺囑</div>
 <div class="draft-block draft--p left">西元1796年11月，一場突如其來的中風，凱薩琳大帝放下了治理長達34年的俄羅斯，卻也完整奠基了全新面貌、迎向現代化的北疆強國。</div>
 <div class="draft-block draft--p left">三年之後，乾隆與華盛頓亦相繼從人生舞台上謝幕，<span style="font-weight: bold; ">想想，西元十八世紀的這三個人，也許彼此不認識，可是卻聯手改變了西元十八世紀之後的文明世界，看著今日的俄羅斯、中國、美利堅合眾國，他們的身影，似乎不曾遠去。</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/54bdbf5c-19ad-4cfe-854c-42c492165caf.jpg" data-width="800" data-height="995" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/54bdbf5c-19ad-4cfe-854c-42c492165caf.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">補充一下：</div>
 <div class="draft-block draft--p left">很多史冊會介紹其為<span style="font-weight: bold; ">「葉卡捷琳娜」（Екатерина），這是俄文發音，若轉成英文時，就成為了「凱薩琳」（Catherine）</span>，而這個原本在俄國境內不算是熱門的女性名字「凱薩琳」，透過了大帝的豐功偉業，數百年來，今日儼然已變成俄羅斯常見的女性名稱，與Anastasia、Maria、Anna等齊名。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">尾聲：</div>
 <div class="draft-block draft--p left">封面照是來自於《凱薩琳大帝》（The Great），一部首播於西元2020年5月的美國劇情類網路連續劇，在Hulu平台上架，主要講述凱薩琳大帝的崛起以及與丈夫彼得三世間的激烈衝突，女主角由愛兒‧芬妮（Mary Elle Fanning）飾演，她的姐姐，也就是我們熟悉的達科塔‧芬妮（Hannah Dakota Fanning）。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=1sMrtt7sAR8"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/1sMrtt7sAR8" width="600px" height="400px"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Catherine_the_Great" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Catherine_the_Great</a></div>
